fix-todo-router

--- a/29-reacts-practice/05-TOTDO-LIST-Lamkov-ROUTES/db.json5
+++ b/29-reacts-practice/05-TOTDO-LIST-Lamkov-ROUTES/db.json5
@@ -1,1 +1,1 @@
-{tasks:[{id:'f90c',text:'йцукенг',isDone:false},{id:'4cd9',text:'qwsed',isDone:false},{id:'933d',text:'dfggh',isDone:false}]}
+{tasks:[{id:'afd0',text:'sds',isDone:false},{id:'aa74',text:'мими',isDone:false},{id:'22c1',text:'мсмс',isDone:false}]}
