--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/package.json
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-paginate": "^8.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.0",
     "redux-persist": "^6.0.0"
