--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/package.json
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/package.json
@@ -18,6 +18,7 @@
     "react-player": "^3.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.0",
+    "reactjs-input-search": "^1.2.4",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
